Updated tmux.conf for Airline colors to show

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,3 +29,6 @@ bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 bind ] paste-buffer
 
+# VIM Airline
+set-window-option -g utf8 on
+set -g default-terminal "screen-256color"
