TMUX: Added pane switching to configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -29,6 +29,12 @@ bind -t vi-copy y copy-selection
 bind -t vi-copy V rectangle-toggle
 bind ] paste-buffer
 
+# VIM Pane navigation (bind hjkl)
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # VIM Airline
 set-window-option -g utf8 on
 set -g default-terminal "screen-256color"
